--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body{
     padding: 15px 35px ;
 }
 
+
 /*nav*/
 nav{
     display: flex;
@@ -54,6 +55,10 @@ nav a{
     padding: 30px 30px 0px 150px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
+}
+.banner-content{
+    max-width: 500px;
 }
 .banner .Porfile-pic{
     width: 500px;
@@ -77,5 +82,39 @@ nav a{
     font-weight: 400;
     line-height: 30px; 
 }
+/*main*/
 
+main{
+    max-width: 1040px;
+    margin: 0px auto;
+}
+/*about*/
+
+.about{
+    padding: 130px;
+    border-radius: 10px;
+    background: #FFF8F3;
+    margin-top: 130px;
+}
+.section-title{
+    color:#181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+.section-discription{
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
+}
+.about-info-containe{
+    display: flex;
+    justify-content: space-around;
+}
+.about-info{
+    text-align: center;
+}
+.info-description{
+    font: size 40px;
+}
 
