--- a/style.css
+++ b/style.css
@@ -47,9 +47,9 @@ nav a{
 
 .header{
     background: #FFF8F3;
-    background-image: url(images/header_bg.png);
+    background-image: url(images/header_bg.png), url(images/developer.png);
     background-repeat: no-repeat;
-    background-position: bottom right;
+    background-position: bottom right, top left;
 }
 .banner{
     padding: 30px 30px 0px 150px;
@@ -88,6 +88,9 @@ main{
     max-width: 1040px;
     margin: 0px auto;
 }
+main section{
+    margin-top: 130px;
+}
 /*about*/
 
 .about{
@@ -113,8 +116,30 @@ main{
 }
 .about-info{
     text-align: center;
+    
 }
-.info-description{
-    font: size 40px;
+/* skills */
+#what-i-do-discription{
+    padding: 30px 150px;
 }
+.skills-container{
+    display: flex;
+    gap: 24px;
+}
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+.skill:hover{
+    background-color: pink;
+    border: 2px solid black;
+}
+.skill-description{
+    color:#757575;
+    font-size: 16px;
+
+}
+
 
